--- a/TheMovieDB/TheMovieDB/features/Favorites/Favorites.storyboard
+++ b/TheMovieDB/TheMovieDB/features/Favorites/Favorites.storyboard
@@ -37,13 +37,13 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="ARTEMIS FOWL" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nX4-le-SUb">
-                                                    <rect key="frame" x="178" y="11" width="216" height="39"/>
+                                                    <rect key="frame" x="178" y="39.5" width="216" height="39"/>
                                                     <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="30"/>
                                                     <color key="textColor" name="gold"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year 2018" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ue-se-7J4">
-                                                    <rect key="frame" x="178" y="58" width="216" height="19.5"/>
+                                                    <rect key="frame" x="178" y="86.5" width="216" height="19.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                     <nil key="highlightedColor"/>
@@ -58,11 +58,13 @@
                                                 <constraint firstItem="6Ue-se-7J4" firstAttribute="leading" secondItem="EqF-50-YBG" secondAttribute="trailing" constant="8" id="NTU-fm-ZbY"/>
                                                 <constraint firstItem="EqF-50-YBG" firstAttribute="centerY" secondItem="efB-rK-9dr" secondAttribute="centerY" id="h6x-bg-Eht"/>
                                                 <constraint firstItem="6Ue-se-7J4" firstAttribute="top" secondItem="nX4-le-SUb" secondAttribute="bottom" constant="8" id="jSS-z1-SEK"/>
-                                                <constraint firstItem="nX4-le-SUb" firstAttribute="top" secondItem="efB-rK-9dr" secondAttribute="topMargin" id="sDG-at-B7V"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="tintColor" red="0.8902680838" green="0.2070635129" blue="0.17371135160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="nX4-le-SUb" firstAttribute="centerY" secondItem="GcV-1C-vv1" secondAttribute="centerY" constant="-16" id="MEg-o7-kCt"/>
+                                        </constraints>
                                         <connections>
                                             <outlet property="posterImageView" destination="EqF-50-YBG" id="Evw-ua-bkM"/>
                                             <outlet property="title" destination="nX4-le-SUb" id="3fI-vE-jPI"/>
@@ -75,19 +77,19 @@
                                     <outlet property="delegate" destination="PiT-FM-XXn" id="V3P-MA-jrj"/>
                                 </connections>
                             </tableView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WIj-Yl-PIB">
-                                <rect key="frame" x="0.0" y="154.5" width="414" height="597"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty_yellow" translatesAutoresizingMaskIntoConstraints="NO" id="WIj-Yl-PIB">
+                                <rect key="frame" x="0.0" y="149.5" width="414" height="597"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="4Fr-lL-XII" firstAttribute="trailing" secondItem="vVg-YV-31H" secondAttribute="trailing" id="6FM-x7-hKh"/>
+                            <constraint firstItem="WIj-Yl-PIB" firstAttribute="centerX" secondItem="haa-KF-nvc" secondAttribute="centerX" id="AEL-h1-y9V"/>
                             <constraint firstItem="vVg-YV-31H" firstAttribute="bottom" secondItem="4Fr-lL-XII" secondAttribute="bottom" id="Au5-hS-GSL"/>
+                            <constraint firstItem="WIj-Yl-PIB" firstAttribute="centerY" secondItem="haa-KF-nvc" secondAttribute="centerY" id="SGp-Qa-fDL"/>
                             <constraint firstItem="WIj-Yl-PIB" firstAttribute="width" secondItem="haa-KF-nvc" secondAttribute="width" id="T2J-F3-epe"/>
                             <constraint firstItem="vVg-YV-31H" firstAttribute="top" secondItem="4Fr-lL-XII" secondAttribute="top" id="TGU-0P-ytp"/>
-                            <constraint firstItem="WIj-Yl-PIB" firstAttribute="centerX" secondItem="4Fr-lL-XII" secondAttribute="centerX" id="VH3-O9-fxi"/>
                             <constraint firstItem="WIj-Yl-PIB" firstAttribute="height" secondItem="haa-KF-nvc" secondAttribute="height" multiplier="2/3" id="gcz-Rt-fFM"/>
-                            <constraint firstItem="WIj-Yl-PIB" firstAttribute="centerY" secondItem="4Fr-lL-XII" secondAttribute="centerY" id="rhd-hm-tbH"/>
                             <constraint firstItem="vVg-YV-31H" firstAttribute="leading" secondItem="4Fr-lL-XII" secondAttribute="leading" id="uOP-qR-pSs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4Fr-lL-XII"/>
@@ -103,6 +105,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="empty_yellow" width="400" height="400"/>
         <namedColor name="gold">
             <color red="1" green="0.6380000114440918" blue="0.0020000000949949026" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
